--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ default-members = [".", "cli"]
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
+
+[lints.clippy]
+unwrap_used = "deny"
+panic = "deny"
