--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ thiserror = "2.0.12"
 
 [dev-dependencies]
 bitflags = { version = "2.9.0", features = ["arbitrary"] }
+fs-err = "3.1.0"
+walkdir = "2.5.0"
 
 [workspace]
 members = [".", "cli"]
