--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -13,3 +13,4 @@ clap = { version = "4.5.31", features = ["derive"] }
 elfie = { path = "..", version = "0.1.0" }
 env_logger = "0.11.6"
 fs-err = "3.1.0"
+log = "0.4.26"
