--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/main.rs"
 
 [dependencies]
 clap = { version = "4.5.31", features = ["derive"] }
+colored = "3.0.0"
 elfie = { path = "..", version = "0.1.0" }
 env_logger = "0.11.6"
 fs-err = "3.1.0"
