--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -14,4 +14,10 @@ colored = "3.0.0"
 elfie = { path = "..", version = "0.1.0" }
 env_logger = "0.11.6"
 fs-err = "3.1.0"
+glob = "0.3.2"
 log = "0.4.26"
+thiserror = "2.0.12"
+
+[dev-dependencies]
+tempfile = "3.18.0"
+walkdir = "2.5.0"
