--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -15,8 +15,8 @@ elfie = { path = "..", version = "0.1.0" }
 env_logger = "0.11.6"
 fs-err = "3.1.0"
 glob = "0.3.2"
-log = "0.4.26"
-thiserror = "2.0.12"
+log.workspace = true
+thiserror.workspace = true
 
 [dev-dependencies]
 base32 = "0.5.1"
