--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ fs-err = "3.1.0"
 walkdir = "2.5.0"
 
 [workspace]
-members = [".", "cli"]
-default-members = [".", "cli"]
+members = [".", "cli", "dl"]
+default-members = [".", "cli", "dl"]
 
 [workspace.package]
 version = "0.1.0"
