--- a/dl/Cargo.toml
+++ b/dl/Cargo.toml
@@ -4,10 +4,14 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[features]
+default =  ["ld-so"]
+ld-so = ["dep:glob"]
+
 [dependencies]
 elfie = { path = "..", version = "0.1.0" }
 fs-err = "3.1.0"
-glob = "0.3.2"
+glob = { version = "0.3.2", optional = true }
 log.workspace = true
 thiserror.workspace = true
 
