--- a/dl/Cargo.toml
+++ b/dl/Cargo.toml
@@ -5,8 +5,8 @@ edition.workspace = true
 license.workspace = true
 
 [features]
-default =  ["ld-so"]
-ld-so = ["dep:glob"]
+default =  ["gnu"]
+gnu = ["dep:glob"]
 
 [dependencies]
 elfie = { path = "..", version = "0.1.0" }
@@ -21,3 +21,6 @@ sha2 = "0.10.8"
 tempfile = "3.18.0"
 walkdir = "2.5.0"
 env_logger = "0.11.6"
+
+[lints]
+#workspace = true
