--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "elb"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+homepage.workspace = true
+repository.workspace = true
+documentation = "https://docs.rs/elb"
+readme = "README.md"
+description = "A library that supports reading ELF files and patching RPATH, RUNPATH and interpreter."
+keywords = ["elf", "patch", "rpath", "runpath", "interpreter"]
+categories = ["encoding", "no-std", "api-bindings"]
+include = ["**/*.rs", "Cargo.toml", "README.md"]
 
 [features]
 default = ["std"]
@@ -28,6 +36,8 @@ default-members = [".", "cli", "dl"]
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
+homepage = "https://github.com/igankevich/elb"
+repository = "https://github.com/igankevich/elb"
 
 [workspace.dependencies]
 bitflags = { version = "2.9.0", default-features = false, features = [] }
@@ -44,8 +54,8 @@ panic = "deny"
 [workspace.lints.rust]
 missing_docs = "warn"
 
-[profile.dev.package.sha2]
+[profile.test.package.sha2]
 opt-level = 3
 
-[profile.dev.package.base32]
+[profile.test.package.base32]
 opt-level = 3
