--- a/dl/Cargo.toml
+++ b/dl/Cargo.toml
@@ -26,10 +26,11 @@ log.workspace = true
 thiserror.workspace = true
 
 [dev-dependencies]
+arbtest = "0.3.2"
 base32 = "0.5.1"
+env_logger = "0.11.6"
 sha2 = "0.10.8"
 tempfile = "3.18.0"
-env_logger = "0.11.6"
 
 [lints]
 workspace = true
