--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ thiserror.workspace = true
 arbitrary = { version = "1.4.1", features = ["derive"] }
 arbtest = "0.3.2"
 bitflags = { workspace = true, features = ["arbitrary"] }
-fs-err = "3.1.0"
+fs-err.workspace = true
 
 [workspace]
 members = [".", "cli", "dl"]
@@ -40,7 +40,8 @@ repository = "https://github.com/igankevich/elb"
 
 [workspace.dependencies]
 bitflags = { version = "2.9.0", default-features = false, features = [] }
-log = { version = "0.4.26", default-features = false, features = [] }
+fs-err = "3.1.0"
+log = { version = "0.4.27", default-features = false, features = [] }
 thiserror = { version = "2.0.12", default-features = false, features = [] }
 
 [lints]
@@ -52,8 +53,5 @@ unwrap_used = "deny"
 [workspace.lints.rust]
 missing_docs = "warn"
 
-[profile.test.package.sha2]
-opt-level = 3
-
-[profile.test.package.base32]
+[profile.test.package.blake2b_simd]
 opt-level = 3
