--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -13,11 +13,11 @@ categories = ["encoding", "command-line-utilities", "api-bindings"]
 include = ["**/*.rs", "Cargo.toml", "README.md"]
 
 [dependencies]
-clap = { version = "4.5.31", features = ["derive"] }
+clap = { version = "4.5.35", features = ["derive"] }
 colored = "3.0.0"
 elb = { path = "..", version = "0.3.0" }
-elb-dl = { path = "../dl", version = "0.3.0" }
-env_logger = "0.11.6"
+elb-dl = { path = "../dl", version = "0.3.0", features = ["relocate"] }
+env_logger = "0.11.8"
 fs-err = "3.1.0"
 log.workspace = true
 thiserror.workspace = true
