--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ workspace = true
 
 [workspace.lints.clippy]
 unwrap_used = "deny"
+missing_safety_doc = "deny"
+undocumented_unsafe_blocks = "deny"
 
 [workspace.lints.rust]
 missing_docs = "warn"
