Replace base32 with a crate (#4)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ members = [".", "cli", "dl"]
 default-members = [".", "cli", "dl"]
 
 [workspace.package]
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/igankevich/elb"
@@ -49,6 +49,8 @@ workspace = true
 
 [workspace.lints.clippy]
 unwrap_used = "deny"
+missing_safety_doc = "deny"
+undocumented_unsafe_blocks = "deny"
 
 [workspace.lints.rust]
 missing_docs = "warn"
