--- a/dl/Cargo.toml
+++ b/dl/Cargo.toml
@@ -20,8 +20,9 @@ musl = []
 relocate = ["dep:blake2b_simd"]
 
 [dependencies]
+base32-fs = "0.1.2"
 blake2b_simd = { version = "1.0.3", optional = true }
-elb = { path = "..", version = "0.3.0" }
+elb = { path = "..", version = "0.3.1" }
 fs-err = { workspace = true, optional = true }
 glob = { version = "0.3.2", optional = true }
 log.workspace = true
