--- a/dl/Cargo.toml
+++ b/dl/Cargo.toml
@@ -36,3 +36,7 @@ tempfile = "3.19.1"
 
 [lints]
 workspace = true
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
