--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ members = [".", "cli", "dl"]
 default-members = [".", "cli", "dl"]
 
 [workspace.package]
-version = "0.3.2"
+version = "0.4.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/igankevich/elb"
@@ -43,6 +43,8 @@ bitflags = { version = "2.9.0", default-features = false, features = [] }
 fs-err = "3.1.0"
 log = { version = "0.4.27", default-features = false, features = [] }
 thiserror = { version = "2.0.12", default-features = false, features = [] }
+elb = { path = ".", version = "0.4.0" }
+elb-dl = { path = "dl", version = "0.4.0" }
 
 [lints]
 workspace = true
