--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -15,8 +15,8 @@ include = ["**/*.rs", "Cargo.toml", "README.md"]
 [dependencies]
 clap = { version = "4.5.36", features = ["derive"] }
 colored = "3.0.0"
-elb = { path = "..", version = "0.3.1" }
-elb-dl = { path = "../dl", version = "0.3.1", features = ["relocate"] }
+elb.workspace = true
+elb-dl = { workspace = true, features = ["relocate"] }
 env_logger = "0.11.8"
 fs-err = "3.1.0"
 log.workspace = true
