--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ log.workspace = true
 thiserror.workspace = true
 
 [dev-dependencies]
-arbitrary = { version = "1.4.1", features = ["derive"] }
+arbitrary = { version = "1.4.2", features = ["derive"] }
 arbtest = "0.3.2"
 bitflags = { workspace = true, features = ["arbitrary"] }
 fs-err.workspace = true
@@ -32,17 +32,19 @@ members = [".", "cli", "dl"]
 default-members = [".", "cli", "dl"]
 
 [workspace.package]
-version = "0.3.2"
+version = "0.4.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/igankevich/elb"
 repository = "https://github.com/igankevich/elb"
 
 [workspace.dependencies]
-bitflags = { version = "2.9.0", default-features = false, features = [] }
-fs-err = "3.1.0"
-log = { version = "0.4.27", default-features = false, features = [] }
-thiserror = { version = "2.0.12", default-features = false, features = [] }
+bitflags = { version = "2.10.0", default-features = false, features = [] }
+fs-err = "3.1.3"
+log = { version = "0.4.28", default-features = false, features = [] }
+thiserror = { version = "2.0.17", default-features = false, features = [] }
+elb = { path = ".", version = "0.4.0" }
+elb-dl = { path = "dl", version = "0.4.0" }
 
 [lints]
 workspace = true
